--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-markdown": "^10.1.0",
+    "react-modal": "^3.16.3",
     "react-slick": "^0.30.3",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
