--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crisp-sdk-web": "^1.0.25",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
