--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
     "react-modal": "^3.16.3",
     "react-slick": "^0.30.3",
