--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-modal": "^3.16.3",
     "react-slick": "^0.30.3",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "slick-carousel": "^1.8.1"
   },
