Contact page ui bug fixed

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@botpress/webchat": "^2.4.1",
+    "@userback/widget": "^0.3.11",
     "crisp-sdk-web": "^1.0.25",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.479.0",
